--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <p><a href="index-foundation.html">Example page</a> and <a href="https://get.foundation/sites/docs/">documentation</a>.</p>
     <h2>Bulma</h2>
     <p><a href="index-bulma.html">An Example page</a> and <a href="https://bulma.io/documentation/">documentation</a>.</p>
+    <p>Some more text</p>
 </body>
 </html>
